# cosmorocket

./: .clang-format  .gitignore  HOW_TO_GIT.md  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: pio-build.yaml  pio-check.yaml
Main/include/: button.h  gps.h  utilities.h
Main/src/: gps.cpp  interrupts.cpp  main.cpp
T-beam/: platformio.ini
T-beam/include/: gps.h
boards/: .clang-tidy  .gitignore  download_fs.py  platformio.ini
boards/include/: bmp.h  board_config.h  camera.h  display.h  gps.h  ignition.h  logger.h  lora-uart.h  lora.h  lora868.h  memory.h  mpu.h
boards/src/: bmp.cpp  camera.cpp  display.cpp  gps.cpp  ignition.cpp  led.cpp  logger.cpp  lora-uart.cpp  lora.cpp  lora868.cpp  main.cpp  memory.cpp  mpu.cpp  sd_card.cpp
boards/test/: README
docs/: HOW_TO_GIT.md  HOW_TO_MODULE.md
flights-simulator/: RocketSimulationTool.ipynb  requirements.txt
flights-simulator/monte_carlo_simulations/: test.inputs.txt  test.outputs.txt
main/: .clang-tidy  .clangd  .gitignore  Makefile  platformio.ini  receive_funct.txt
main/include/: bmp.h  board_config.h  gps.h  led.h  logger.cpp  logger.h  lora.h  memory.h  mpu.h  sd.h  sd_card.h
main/src/: bmp.cpp  gps.cpp  led.cpp  logger.cpp  lora.cpp  main.cpp  memory.cpp  mpu.cpp  sd.cpp  sd_card.cpp
test/: firebase.json
test-platform/: platformio.ini  ws.py
test-platform-scale/: Makefile  platformio.ini
test-platform/visualizer/: Cargo.toml  generator.py
test-platform/visualizer/src/: main.rs
webdev/: .firebaserc  firebase.json  package-lock.json
webdev-old/: package.json
(+105 files in other folders)
