[package]
name = "TestPlatformVisualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32.0"
egui = "0.32.0"
egui_plot = "0.33.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] } 
serialport = "4.7.2"
egui_extras = "0.32.0"
